force-app/main/default/objects/Case/fields/PreferredBreed__c.field-meta.xml
<CustomField>
    <fullName>PreferredBreed__c</fullName>
    <description>The preferred breed of Pet when enrolling for an adoption</description>
    <label>Preferred Breed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>