force-app/main/default/objects/Case/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province or area for the adoption request</description>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provinces</valueSetName>
    </valueSet>
</CustomField>